--- a/src/pages/styles/images.css
+++ b/src/pages/styles/images.css
@@ -1,19 +1,20 @@
 .main__div--img{
     width: 50px;
     height: 50px;
-    object-fit: contain;
+    object-fit: cover;
     margin-right: .8rem;
+    border-radius: 50%;
 }
 .main__item--img{
     width: 50px;
     height: 50px;
-    object-fit: contain;
+    object-fit: cover;
     border-radius: 50%;
 }
 .main__header--img{
     width: 50px;
     height: 50px;
-    object-fit: contain;
+    object-fit: cover;
     border-radius: 50%;
     margin-right: 1rem;
 }
