--- a/src/pages/styles/containers.css
+++ b/src/pages/styles/containers.css
@@ -121,3 +121,9 @@ body{
     align-items: center;
     gap: .3rem;
 }
+.main__posts--pages{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
